terraform/1-vpc.tf
resource "aws_vpc" "vpc-simpleecommerce" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "vpc-simpleecommerce"
  }
}
